--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,38 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #333;
+  color: #fff;
+  line-height: 1.6;
+  height: 100vh;
+}
+
 .form{
   width: 500px;
 }
 
 .container{
-  padding:20px
+  width: 100%;
+  height: 100%;
+
+  /* CSS Smooth Scroll */
+}
+
+.scroll-button {
+  position: absolute;
+  z-index: 1;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  height: 100vh;
 }
