--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,63 @@ section {
   width: 100%;
   height: 100vh;
 }
+
+.slideshow { 
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.slideshow li { 
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  opacity: 0;
+  z-index: 0;
+  animation: imageAnimation 38s linear infinite; 
+}
+
+.slideshow li:nth-child(1) { 
+  background-image: url("./assets/images/wedding1.jpg") 
+}
+.slideshow li:nth-child(2) { 
+  background-image: url("./assets/images/wedding2.jpg");
+  animation-delay: 8s; 
+}
+.slideshow li:nth-child(3) { 
+  background-image: url("./assets/images/wedding3.jpg");
+  animation-delay: 16s; 
+}
+.slideshow li:nth-child(4) { 
+  background-image: url("./assets/images/wedding4.jpg");
+  animation-delay: 24s; 
+}
+.slideshow li:nth-child(5) { 
+  background-image: url("./assets/images/wedding5.jpg");
+  animation-delay: 30s; 
+}
+
+@keyframes imageAnimation { 
+  0% { 
+      opacity: 0; 
+      animation-timing-function: ease-in;
+  }
+  10% {
+      opacity: 1;
+      animation-timing-function: ease-out;
+  }
+  20% {
+      opacity: 1
+  }
+  30% {
+       opacity: 0
+  }
+}
