--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@ body {
   height: 100vh;
 }
 
+body::-webkit-scrollbar {
+  width: 0 !important;
+}
+
 .form{
   width: 500px;
 }
@@ -18,8 +22,6 @@ body {
 .container{
   width: 100%;
   height: 100%;
-
-  /* CSS Smooth Scroll */
 }
 
 .scroll-button {
@@ -57,7 +59,7 @@ section {
   background-repeat: no-repeat;
   opacity: 0;
   z-index: 0;
-  animation: imageAnimation 38s linear infinite; 
+  animation: imageAnimation 30s linear infinite; 
 }
 
 .slideshow li:nth-child(1) { 
@@ -65,19 +67,19 @@ section {
 }
 .slideshow li:nth-child(2) { 
   background-image: url("./assets/images/wedding2.jpg");
-  animation-delay: 8s; 
+  animation-delay: 6s; 
 }
 .slideshow li:nth-child(3) { 
   background-image: url("./assets/images/wedding3.jpg");
-  animation-delay: 16s; 
+  animation-delay: 12s; 
 }
 .slideshow li:nth-child(4) { 
   background-image: url("./assets/images/wedding4.jpg");
-  animation-delay: 24s; 
+  animation-delay: 18s; 
 }
 .slideshow li:nth-child(5) { 
   background-image: url("./assets/images/wedding5.jpg");
-  animation-delay: 30s; 
+  animation-delay: 24s; 
 }
 
 @keyframes imageAnimation { 
@@ -95,4 +97,19 @@ section {
   30% {
        opacity: 0
   }
+}
+
+.register-btn {
+  width: 150px;
+  position: absolute;
+  top: 85%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  z-index: 2;
+}
+
+.register-btn a {
+  text-decoration: none;
+  text-transform: uppercase;
 }
