--- a/src/assets/css/spinner.css
+++ b/src/assets/css/spinner.css
@@ -18,7 +18,7 @@
     margin: 0 auto;
     width: 15%;
     height: 15%;
-    background-color: #333;
+    background-color: rgb(255, 255, 255, 0.85);
     border-radius: 100%;
     -webkit-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
             animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
