--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,36 @@ section {
   animation-delay: 36s; 
 }
 
+@media screen and (max-width: 780px){
+  .slideshow li:nth-child(1) { 
+    background-image: url("./assets/images/dan-and-adi1.jpg") 
+  }
+  .slideshow li:nth-child(2) { 
+    background-image: url("./assets/images/dan-and-adi9.jpg");
+    animation-delay: 6s; 
+  }
+  .slideshow li:nth-child(3) { 
+    background-image: url("./assets/images/dan-and-adi8.jpg");
+    animation-delay: 12s; 
+  }
+  .slideshow li:nth-child(4) { 
+    background-image: url("./assets/images/dan-and-adi10.jpg");
+    animation-delay: 18s; 
+  }
+  .slideshow li:nth-child(5) { 
+    background-image: url("./assets/images/dan-and-adi5.jpg");
+    animation-delay: 24s; 
+  }
+  .slideshow li:nth-child(6) { 
+    background-image: url("./assets/images/dan-and-adi6.jpg");
+    animation-delay: 30s; 
+  }
+  .slideshow li:nth-child(7) { 
+    background-image: url("./assets/images/dan-and-adi7.jpg");
+    animation-delay: 36s; 
+  }
+}
+
 @keyframes imageAnimation { 
   0% { 
       opacity: 0; 
